# Inventory-Bot

./: README.md
src/autonomous_robot_3/: CMakeLists.txt  package.xml
src/autonomous_robot_3/config/: base_local_planner_params.yaml  controllers.yaml  costmap_common_params.yaml  global_costmap_params.yaml  joint_names_autonomous_robot_3.yaml  local_costmap_params.yaml
src/autonomous_robot_3/launch/: amcl.launch  controller_manager_test.launch  display.launch  gazebo.launch  manager_test.launch  test.launch
src/autonomous_robot_3/meshes/: base_link.STL  link_tray.STL  linkleftback.STL  linkleftfront.STL  linkrightback.STL  linkrightfront.STL
src/autonomous_robot_3/param/common/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner.yaml
src/autonomous_robot_3/rviz/: config2.rviz  config3.rviz
src/autonomous_robot_3/scripts/: joint_position_controller.py  move_tray.py  movetray.py  wait_for_service.py
src/autonomous_robot_3/tray_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/autonomous_robot_3/tray_moveit_config/config/: autonomous_robot_3.srdf  fake_controllers.yaml  gazebo_autonomous_robot_3.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/autonomous_robot_3/tray_moveit_config/launch/: chomp_planning_pipeline.launch.xml  (+14 more)
src/autonomous_robot_3/urdf/: autonomous_robot_3.csv  autonomous_robot_3.urdf
src/autonomous_robot_3/worlds/: world_12
(+4 files in other folders)
