<?xml version="1.0"?>
<package format="2">
  <name>autonomous_robot_3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for autonomous_robot_3</p>
    <p>This package contains configuration data, 3D models, and launch files for the autonomous_robot_3 robot</p>
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend> <!-- Replace run_depend with exec_depend -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>

